heimabendyeiten und kontaktmail

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                     <div class="grid md:grid-cols-2 gap-4">
                         <div>
                             <h4 class="text-lg font-semibold mb-2">Stamm Saporoger</h4>
-                            <p class="text-gray-600">Dienstags, 17:30 - 19:30 Uhr</p>
+                            <p class="text-gray-600">Dienstags, 17:00 - 18:30 Uhr</p>
                         </div>
                         <div>
                             <h4 class="text-lg font-semibold mb-2">Hag Theophanu</h4>
-                            <p class="text-gray-600">Dienstags, 17:00 - 19:00 Uhr</p>
+                            <p class="text-gray-600">Dienstags, 17:00 - 18:30 Uhr</p>
                         </div>
                     </div>
                 </div>
@@ -146,8 +146,8 @@
                     <p class="mt-4">
                         Wenn du Lust darauf hast, komm einfach beim nächsten Heimabend vorbei. Oder schreib uns. Einstieg jederzeit möglich!
                     </p>
-                    <a href="mailto:hag-theophanu@gmx.de" class="inline-block mt-4 text-blue-800 hover:text-blue-600">
-                        hag-theophanu@gmx.de
+                    <a href="mailto:kontakt@saporoger.de" class="inline-block mt-4 text-blue-800 hover:text-blue-600">
+                        kontakt@saporoger.de
                     </a>
                 </div>
             </div>
