--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </nav>
 
     <!-- Hero Section with Parallax -->
-    <header class="parallax-header relative">
-        <div class="overlay"></div>
+    <div class="parallax-container hero-parallax">
+        <div class="parallax-bg" style="background-image: url('titel.jpg');"></div>
         <div class="container mx-auto px-4 py-32 text-center relative z-10">
             <h1 class="text-4xl md:text-5xl font-bold mb-4 text-white">Pfadfinder in Hürth</h1>
             <p class="text-lg md:text-xl mb-8 text-white">Gemeinschaft, Abenteuer und Natur erleben</p>
@@ -60,7 +60,7 @@
                 Jetzt mitmachen!
             </a>
         </div>
-    </header>
+    </div>
 
     <!-- Über uns Section -->
     <section id="ueber-uns" class="py-16 bg-white">
