--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12">Kontakt</h2>
             <div class="max-w-3xl mx-auto bg-white p-6 md:p-8 rounded-lg shadow-lg text-center">
                 <p class="m-4">
-                    Komm gerne einfach beim nächsten Heimabend vorbei. Oder schreib uns.
+                    Komm gerne einfach beim nächsten Heimabend vorbei. Oder
                 </p>
                 <a href="mailto:kontakt@saporoger.de" class="inline-block bg-blue-900 text-white px-6 md:px-8 py-3 rounded-full font-bold hover:bg-blue-800 transition duration-300">
-                    Kontaktiere uns
+                    Schreib uns!
                 </a>
             </div>
         </div>
