--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="bg-gray-50 p-6 rounded-lg mb-8">
                     <h3 class="text-2xl font-semibold mb-4 text-blue-800">Unsere Heimabende</h3>
                     <p class="text-gray-600 mb-4">
-                        Jeden Dienstag treffen wir uns in unserem Pfadfinderheim in Hürth-Hermülheim. Hier lernen die Kinder und Jugendlichen spielerisch die Grundlagen des Pfadfinderlebens kennen.
+                        Jeden Dienstag treffen wir uns in unserem Pfadfinderheim in Hürth-Kendenich, Luxemburger Str. 519. Hier lernen die Kinder und Jugendlichen spielerisch die Grundlagen des Pfadfinderlebens kennen.
                     </p>
                     <div class="grid md:grid-cols-2 gap-4">
                         <div>
@@ -144,13 +144,14 @@
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12">Pfadfinderheim</h2>
             <div class="max-w-3xl mx-auto bg-white p-6 md:p-8 rounded-lg shadow-lg">
-                <p class="text-gray-600 mb-4">Nur 10 km südwestlich der Kölner Innenstadt liegt der ehemalige Tierpark, den wir zum Pfadfinderzentrum umgebaut haben.</p>
+                <p class="text-gray-600 mb-4">An der Luxemburger Str. 519, nur 10 km südwestlich der Kölner Innenstadt liegt der ehemalige Tierpark, den wir zum Pfadfinderzentrum umgebaut haben.</p>
                 <h3 class="text-xl md:text-2xl font-bold mb-4">Ausstattung</h3>
                 <p class="text-gray-600 mb-4">Im renovierten Haupthaus befinden sich die Küche, zwei Schlafzimmer, ein großer Wohnraum mit einem großen Tisch, das Bad mit Dusche, Waschbecken und einer Toilette. Draußen findet Ihr eine Holzjurte mit Sitzgelegenheiten und Kühlschränken, sowie eine Terasse unter dem Vordach. Eine große Feuerstelle, eine Außentoilette und viel Platz für Zelte bieten Euch optimale Bedingungen für Euren Aufenthalt im Freien.</p>
                 <h3 class="text-lg md:text-xl font-bold mb-2">Kapazität</h3>
                 <p class="text-gray-600 mb-4">8 Betten in 2 Zimmern, Zeltwiese für ca 50 Personen, Gruppenraum für ca 15 Persoen</p>
-                <h3 class="text-lg md:text-xl font-bold mb-2">Bemerkungen</h3>
-                <p class="text-gray-600 mb-4">Es sind keine Partys erlaubt.<br>Müll und Flaschen müssen selber wieder mitgenommen werden.<br>Für die Betten sind Schlafsäcke nötig.</p>
+                <h3 class="text-lg md:text-xl font-bold mb-2">Vermietung</h3>
+                <p class="text-gray-600 mb-4">Vermietungsanfragen unter <a href="mailto:vermietung@saporoger.de" class="text-blue-800 hover:text-blue-600">vermietung@saporoger.de</a></p>
+                <p class="text-gray-600 mb-4">Es sind keine Partys erlaubt. Müll und Flaschen müssen selber wieder mitgenommen werden. Für die Betten sind Schlafsäcke nötig.</p>
                 
             </div>
         </div>
