--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stamm Saporoger & Hag Theophanu - Pfadfinder in Hürth</title>
     <meta name="keywords" content="Pfadfinder, Hürth, Stamm, Saporoger, DPB, DPSG, Jugendgruppe, Voll Joot, Fahrten, Abenteuer" />
-	<meta name="description" content="Die Saporoger in Hürth sind eine Jungen-Gruppe des Deutschen Pfadfinder Bundes. Die Pfadfindergruppe Haag Theophanu in Hürth ist eine Mädchen-Gruppe im DPB. Wir gehen gemeinsam auf Fahrten um Abenteuer und die Natur zu erleben." />
+	<meta name="description" content="Der Stamm Saporoger und der Haag Theophanu sind die Hürther Jungen- und Mädchen-Gruppen des Deutschen Pfadfinder Bundes (DPB). Wir gehen gemeinsam auf Fahrten um Abenteuer und die Natur zu erleben." />
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Stamm Saporoger und Haag Theophanu im Deutschen Pfadfinderbund",
+          "legalName": "Deutscher Pfadfinderbund e.V.",
+          "url": "https://saporoger.de/",
+          "email": "kontakt@saporoger.de",
+          "description": "Der Stamm Saporoger und der Haag Theophanu sind die Hürther Jungen- und Mädchen-Gruppen des Deutschen Pfadfinder Bundes (DPB). Wir gehen gemeinsam auf Fahrten um Abenteuer und die Natur zu erleben."
+        }
+      </script>
+
+    <link rel="icon" href="favicon.ico">
 	<meta name="robots" content="INDEX,FOLLOW,NOODP" />
 	<meta name="language" content="de" />
     <script src="tailwind.min.js"></script>
