--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <link rel="icon" href="favicon.ico">
 	<meta name="robots" content="INDEX,FOLLOW,NOODP" />
 	<meta name="language" content="de" />
-    <script src="tailwind.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_with_tailwind.css">
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
@@ -235,7 +234,7 @@
                     Komm gerne einfach beim nächsten Heimabend vorbei. Oder
                 </p>
                 <a href="mailto:kontakt@saporoger.de" class="inline-block bg-blue-900 text-white px-6 md:px-8 py-3 rounded-full font-bold hover:bg-blue-800 transition duration-300">
-                    Schreib uns!
+                    Schreib uns an kontakt@saporoger.de
                 </a>
             </div>
         </div>
