--- a/index.html
+++ b/index.html
@@ -322,9 +322,8 @@
                     Alexander Eckstein<br>
                     Schwalbstraße 8<br>
                     53332 Bornheim<br>
-                    Tel.: <a href="tel:+4922271292" class="text-blue-800 underline">+49 2227 1292</a><br>
-                    E-Mail: <a href="mailto:alexander_eckstein@gmx.net"
-                        class="text-blue-800 underline">alexander_eckstein@gmx.net</a>
+                    E-Mail: <a href="mailto:foerderverein@saporoger.de"
+                        class="text-blue-800 underline">foerderverein@saporoger.de</a>
                 </p>
                 <p class="mt-4 pt-4 border-t border-gray-200">
                     <strong>Anerkennung:</strong><br>
@@ -358,14 +357,31 @@
                     Diese Daten werden ausschließlich dazu verwendet um einen
                     reibungslosen und störungsfreien Betrieb der Seite
                     sicherzustellen, nicht an dritte weitergegeben und in regelmäßigen
-                    Abständen, spätestens nach einem Monat, gelöscht.
+                    Abständen, spätestens nach 6 Monaten, gelöscht.
                 </p>
-                <p><strong>Verantwortlich für den Datenschutz ist:</strong><br>
-                    Anabel Beyenburg<br>
-                    Grüngürtel Str. 10<br>
-                    50996 Köln</p>
+                <p><strong>Verantwortlich für den Datenschutz ist der Datenschutzbeauftragte:</strong><br>
+                    Sebastian Schmittner<br>
+                    Berrenrather Str. 150<br>
+                    50354 Hürth</p>
                 <p><strong>E-Mail:</strong> <a href="mailto:kontakt@saporoger.de"
                         class="text-blue-800 underline">kontakt@saporoger.de</a></p>
+                <p><strong>Rechtsgrundlage:</strong> Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f
+                    DSGVO (berechtigtes Interesse am technischen Betrieb der Website).</p>
+
+                <p><strong>Ihre Rechte:</strong> Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung
+                    der Verarbeitung, Datenübertragbarkeit und Widerspruch. Zur Geltendmachung Ihrer Rechte wenden Sie
+                    sich an: <a href="mailto:kontakt@saporoger.de"
+                        class="text-blue-800 underline">kontakt@saporoger.de</a></p>
+
+                <p><strong>Beschwerderecht:</strong> Sie haben das Recht, sich bei einer Datenschutzaufsichtsbehörde zu
+                    beschweren. Die für uns zuständige Aufsichtsbehörde ist:<br><br>
+                    Landesbeauftragte für Datenschutz und Informationsfreiheit Nordrhein-Westfalen (LDI NRW)<br>
+                    Kavalleriestraße 2-4<br>
+                    40213 Düsseldorf<br>
+                    E-Mail: <a href="mailto:poststelle@ldi.nrw.de"
+                        class="text-blue-800 underline">poststelle@ldi.nrw.de</a><br>
+                    Website: <a href="https://www.ldi.nrw.de/" class="text-blue-800 underline"
+                        target="_blank">www.ldi.nrw.de</a></p>
             </div>
         </div>
     </div>
