--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
                     Wenn Du von der Idee des Geländes angetan bist und es finanziell oder tatkräftig unterstützen
                     willst, so kontaktier uns doch einfach mal!
                 </p>
+                <div class="bg-blue-50 p-4 rounded-lg mb-4">
+                    <h3 class="text-lg font-semibold mb-2">Kontakt Förderverein</h3>
+                    <a href="mailto:foerderverein@saporoger.de"
+                        class="text-blue-800 hover:text-blue-600">foerderverein@saporoger.de</a>
+                </div>
                 <div class="bg-gray-100 rounded-lg p-4 mb-4">
                     <h3 class="text-lg md:text-xl font-bold mb-2">Kontoverbindung</h3>
                     <p class="text-gray-600">Kontoinhaber: Förderverein Stamm Saporoger Hürth e.V.<br>
